--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.7",
+    "ulid": "^2.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
