--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
     "nodemailer": "^6.8.0",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +47,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.6",
     "@types/supertest": "^2.0.11",
